--- a/blog/views/comment.ejs
+++ b/blog/views/comment.ejs
@@ -1,9 +1,9 @@
 <br />
 <% post.comments.forEach(function (comment, index) { %>
 <div style="padding-left:4em">
-    <p><img src="<%= comment.head %>" class="l_head" /><a href="<%= comment.website %>"><%= comment.name %></a>
-        <span class="info"> 回复于 <%= comment.time %></span></p>
-    <p><%- comment.content %></p>
+    <p><img src="<%= comment.comment.head %>" class="l_head" /><a href="<%= comment.comment.website %>"><%= comment.comment.name %></a>
+        <span class="info"> 回复于 <%= comment.comment.time %></span></p>
+    <p><%- comment.comment.content %></p>
 </div>
 <% }) %>
 
